fixed nav view on mobile display

--- a/website/style.css
+++ b/website/style.css
@@ -56,8 +56,7 @@ body{
     width: 100%;
     z-index:2;
     transition: left .5s ease;
-    height: 100vh;
-}
+    }
 
 #header nav{
     height: 100vh;
